--- a/ReikaP/ReikaP.csproj
+++ b/ReikaP/ReikaP.csproj
@@ -62,6 +62,10 @@
     <Reference Include="UnityEngine.AnimationModule">
       <HintPath>G:\Other stuff\Mad_Island_Steam\Mad Island\Mad Island_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>H:\SteamLibrary\steamapps\common\Mad Island\Mad Island_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>G:\Other stuff\Mad_Island_Steam\Mad Island\Mad Island_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
